# janus-hub

./: .env.example  .gitignore  BOOTSTRAP.md  DEVELOPMENT_GUIDELINES.md  LICENSE  PHASE1_SUMMARY.md  README.md  janus_cli.py  project.md  pyproject.toml  test_startup.py
.agent/: blueprint.md  collaboration.md  master_plan.md
.agent/workflows/: evolution_protocol.md
.design/: health_monitor_spec.md
.janus/: DNA.md
core/: audit.py  dispatcher.py  executor.py  memory.py  perception.py  provider.py  schema.py
core/dynamic_skills/: cleaner_expert.json  cleaner_expert.py  datetime_expert.json  datetime_expert.py  design_restorer.json  design_restorer.py  gene_factory.json  gene_factory.py  gene_remover.json  gene_remover.py  git_stats.json  git_stats.py  git_sync.json  git_sync.py  health_monitor.json  health_monitor.py  memory_archiver.json  memory_archiver.py  memory_cleaner.json  memory_cleaner.py  memory_distiller.json  memory_distiller.py  memory_synthesizer.json  memory_synthesizer.py  reflex_expert.json  reflex_expert.py  security_gen.json  security_gen.py  self_diagnostics.json  self_diagnostics.py  speech_expert.json  speech_expert.py  translator_expert.json  translator_expert.py  weather_expert.json  weather_expert.py
core/providers/: antigravity.py  openai.py
core/sensors/: __init__.py  base.py  file_sensor.py  system_sensor.py
docs/: EVOLUTION_CHRONICLE.md
mcp-servers/: local_file_server.py
src/janus_hub/: __init__.py
tests/: test_dispatcher.py  test_mcp_integration.py
